# paper-tooth-analysis

./: .gitignore  .~lock.results.ods#  README.md  Rauheit.ipynb  pyproject.toml  results.ods
docs/specs/: paper-texture-analysis.md
src/paper_tooth_analysis/: __init__.py  analysis.py  cli.py
