[project]
name = "paper-tooth-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Ueding", email = "mu@martin-ueding.de" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2",
    "odfpy>=1.4",
    "pandas>=2",
    "scipy>=1.14",
]

[project.scripts]
paper-tooth-analysis = "paper_tooth_analysis:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
